--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,9 +1,16 @@
 .navbar {
 	background-color: #0a192f;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 11;
+	height: 100px;
+	display: flex;
+	align-items: center;
 }
 
 .navbar__container {
-	padding: 30px 20px;
+	padding: 0 40px;
 	display: flex;
 	align-items: center;
 	width: 100%;
