--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,10 +1,12 @@
 .navbar {
-	background-color: #0a192f;
+	background-color: rgb(10, 25, 47, 0.85);
+	backdrop-filter: blur(10px);
+	box-shadow: 0 10px 30px -10px rgba(2, 12, 27, 0.7);
 	position: fixed;
 	top: 0;
 	width: 100%;
 	z-index: 11;
-	height: 100px;
+	height: 70px;
 	display: flex;
 	align-items: center;
 }
