--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,24 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:regular,bold,italic&subset=latin,latin-ext');
-@import url('https://fonts.googleapis.com/css?family=Rubik:regular,bold,italic&subset=latin,latin-ext');
+@import './shared.css';
 
 * {
 	margin: 0;
 }
 
 body {
-	font-family: 'Rubik', 'San Francisco', 'SF Pro Text', -apple-system,
-		system-ui, sans-serif;
-	font-size: 17px;
-	line-height: 1.5;
+	margin: 0px;
+	width: 100%;
+	min-height: 100%;
+	overflow-x: hidden;
+	-webkit-font-smoothing: antialiased;
+	background-color: var(--navy);
+	color: var(--slate);
+	font-family: var(--font-sans);
+	font-size: var(--fz-xl);
+	line-height: 1.3;
 }
 
 .app {
-	background-color: #0a192f;
+	background-color: var(--navy);
 }
 
 .app__container {
@@ -34,10 +39,6 @@ body {
 	box-sizing: border-box;
 }
 
-.roboto-font {
-	font-family: 'Roboto Mono';
-}
-
 .teal {
-	color: #64ffda;
+	color: var(--green);
 }
