--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -1,3 +1,5 @@
+@import '../../shared.css';
+
 .landing {
 	min-height: 100vh;
 }
@@ -8,28 +10,32 @@
 }
 
 .landing__hi {
-	font-size: 16px;
+	font-size: clamp(var(--fz-sm), 5vw, var(--fz-md));
+	color: var(--green);
 	margin: 0 0 30px 4px;
 	font-weight: 400;
+	font-family: var(--font-mono);
 }
 
 .landing__name {
-	color: #ccd6f6;
-	font-size: clamp(40px, 8vw, 80px);
-	font-weight: 600;
+	color: var(--lightest-slate);
 	line-height: 1.1;
 }
 
 .landing__subheader {
-	color: #8892b0;
-	font-size: clamp(40px, 8vw, 80px);
-	font-weight: 600;
+	color: var(--slate);
 	line-height: 1;
 	margin-top: 10px;
 }
 
+.landing__heading {
+	margin: 0px;
+	font-size: clamp(40px, 8vw, 80px);
+	font-weight: 600;
+}
+
 .landing__about {
-	color: #8892b0;
+	color: var(--slate);
 	font-weight: 200;
 	max-width: 500px;
 	margin-top: 40px;
