--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -24,7 +24,7 @@
 
 .navbar__scroll {
 	height: var(--nav-scroll-height);
-	box-shadow: 0 10px 30px -10px var(--navyShadow);
+	box-shadow: 0 10px 30px -10px var(--navy-shadow);
 	backdrop-filter: blur(10px);
 	background-color: rgb(10, 25, 47, 0.85);
 }
