--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -1,6 +1,17 @@
 @import '../../shared.css';
 
-.project__featured {
+.projectCard {
+	display: grid;
+	gap: 10px;
+	grid-template-columns: repeat(12, 1fr);
+	align-items: center;
+}
+
+.projectCard:not(:last-of-type) {
+	margin-bottom: 100px;
+}
+
+.projectCard__featured {
 	margin: 10px 0px;
 	color: var(--green);
 	font-family: var(--font-mono);
@@ -8,13 +19,50 @@
 	font-weight: 400;
 }
 
-.project__title {
-	color: var(--lightest-slate);
-	font-size: clamp(20px, 5vw, 25px);
-	margin: 0px 0px 10px;
+.projectCard__image-container {
+	box-shadow: 0 10px 30px -15px var(--navy-shadow);
+	transition: var(--transition);
+	grid-area: 1 / 6 / -1 / -1;
+	position: relative;
+	z-index: 1;
 }
 
-.project__description {
+.projectCard:nth-of-type(2n + 1) .projectCard__image-container {
+	grid-column: 1 / 8;
+}
+
+.projectCard__image {
+	width: 100%;
+	border-radius: var(--border-radius);
+	vertical-align: middle;
+	object-fit: contain;
+}
+
+.projectCard__image {
+	width: 100%;
+	max-width: 100%;
+	vertical-align: middle;
+}
+
+.projectCard__content {
+	position: relative;
+	grid-area: 1 / 1 / -1 / 7;
+	z-index: 3;
+	text-align: left;
+}
+
+.projectCard:nth-of-type(2n + 1) .projectCard__content {
+	grid-column: 7 / -1;
+	text-align: right;
+}
+
+.projectCard__title {
+	color: var(--lightest-slate);
+	font-size: clamp(20px, 5vw, 25px);
+	margin-bottom: 20px;
+}
+
+.projectCard__description {
 	box-shadow: 0 10px 30px -15px var(--navy-shadow);
 	transition: var(--transition);
 	position: relative;
@@ -24,21 +72,34 @@
 	background-color: var(--light-navy);
 	color: var(--light-slate);
 	font-size: var(--fz-md);
-	text-align: right;
-	line-height: 1.5;
+	text-align: left;
+	line-height: 1.6;
 }
 
-.project__description:hover {
+.projectCard:nth-of-type(2n + 1) .projectCard__description {
+	text-align: right;
+}
+
+.projectCard .projectCard__description:hover,
+.projectCard .projectCard__description:focus {
 	box-shadow: 0 20px 30px -15px var(--navy-shadow);
 }
 
-.project__technologies {
+.projectCard__description:hover {
+	box-shadow: 0 20px 30px -15px var(--navy-shadow);
+}
+
+.projectCard__technologies {
 	z-index: 2;
 	margin: 25px 0px 10px;
+	text-align: left;
+}
+
+.projectCard:nth-of-type(2n + 1) .projectCard__technologies {
 	text-align: right;
 }
 
-.project__technologies span {
+.projectCard__technologies span {
 	margin: 0px 20px 5px 0px;
 	color: var(--light-slate);
 	font-family: var(--font-mono);
@@ -46,10 +107,18 @@
 	white-space: nowrap;
 }
 
-.project__links {
+.projectCard__technologies span:last-of-type {
+	margin-right: 0px;
+}
+
+.projectCard__links {
+	text-align: left;
+}
+
+.projectCard:nth-of-type(2n + 1) .projectCard__links {
 	text-align: right;
 }
 
-.project__links span {
+.projectCard__links span:not(:last-of-type) {
 	margin-right: 5px;
 }
