--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 
 * {
 	margin: 0;
+	box-sizing: border-box;
 }
 
 body {
@@ -22,6 +23,8 @@ body {
 }
 
 .app__container {
+	z-index: 0;
+	position: relative;
 	padding: 0 100px;
 	display: flex;
 	flex-direction: column;
