--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,11 @@
 
 * {
 	margin: 0;
-	box-sizing: border-box;
+}
+
+html,
+body {
+	height: 100vh;
 }
 
 body {
@@ -18,6 +22,14 @@ body {
 	line-height: 1.3;
 }
 
+#root {
+	min-height: 100vh;
+	display: grid;
+	grid-template-rows: 1fr auto;
+	grid-template-columns: 100%;
+	overflow-x: hidden;
+}
+
 .app {
 	background-color: var(--navy);
 }
@@ -25,7 +37,6 @@ body {
 .app__container {
 	z-index: 0;
 	position: relative;
-	padding: 0 100px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -40,4 +51,26 @@ body {
 	max-width: 1000px;
 	margin: 0 auto;
 	box-sizing: border-box;
+}
+
+@media (max-width: 1080px) {
+	.app__container {
+		padding: 0px 100px;
+	}
+}
+
+@media (max-width: 768px) {
+	.app__container {
+		padding: 0px 50px;
+	}
+}
+
+@media (max-width: 480px) {
+	.app__container {
+		padding: 0px 25px;
+	}
+
+	body {
+		font-size: var(--fz-lg);
+	}
 }
