--- a/src/sections/About/About.css
+++ b/src/sections/About/About.css
@@ -4,7 +4,6 @@
 
 .about__description p {
 	margin-bottom: 15px;
-	font-size: 17px;
 	line-height: 1.5;
 }
 
@@ -39,4 +38,19 @@
 	padding-left: 20px;
 	font-family: var(--font-mono);
 	font-size: var(--fz-sm);
+}
+
+.about__picture {
+	max-width: 300px;
+}
+
+@media (max-width: 768px) {
+	.about__container {
+		display: block;
+	}
+
+	.about__picture {
+		margin: 50px auto 0px;
+		width: 70%;
+	}
 }
