--- a/src/sections/About/About.css
+++ b/src/sections/About/About.css
@@ -46,11 +46,25 @@
 
 @media (max-width: 768px) {
 	.about__container {
-		display: block;
+		display: flex;
+		flex-direction: column;
+	}
+
+	.about__description {
+		order: 2;
 	}
 
 	.about__picture {
-		margin: 50px auto 0px;
+		margin: 0 auto 20px;
 		width: 70%;
+		order: 1;
+	}
+}
+
+@media (max-width: 480px) {
+	.about__picture {
+		margin: 0 auto;
+		width: 70%;
+		order: 1;
 	}
 }
