--- a/src/components/Tabs/TabPanel/TabPanel.css
+++ b/src/components/Tabs/TabPanel/TabPanel.css
@@ -3,7 +3,7 @@
 .tabPanel {
 	width: 100%;
 	height: auto;
-	padding: 10px 30px;
+	padding: 5px 30px;
 	box-sizing: border-box;
 }
 
@@ -50,4 +50,16 @@
 	padding-left: 30px;
 	margin-bottom: 10px;
 	line-height: 1.5;
+}
+
+@media (max-width: 768px) {
+	.tabPanel {
+		padding-left: 20px;
+	}
+}
+
+@media (max-width: 600px) {
+	.tabPanel {
+		padding: 0px;
+	}
 }
