font size changes

--- a/src/components/Navigation/NavLinks/NavLink/NavLink.css
+++ b/src/components/Navigation/NavLinks/NavLink/NavLink.css
@@ -4,7 +4,7 @@
 	color: var(--lightest-slate);
 	margin-right: 30px;
 	font-family: var(--font-mono);
-	font-size: clamp(var(--fz-sm), 4vw, var(--fz-lg));
+	font-size: var(--fz-xs);
 	cursor: pointer;
 }
 
