--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ body {
 	background-color: var(--navy);
 	color: var(--slate);
 	font-family: var(--font-sans);
-	font-size: var(--fz-xl);
+	font-size: var(--fz-lg);
 	line-height: 1.3;
 }
 
@@ -69,7 +69,7 @@ body {
 	}
 
 	body {
-		font-size: var(--fz-lg);
+		font-size: var(--fz-md);
 	}
 }
 
@@ -79,7 +79,7 @@ body {
 	}
 
 	body {
-		font-size: var(--fz-md);
+		font-size: var(--fz-sm);
 	}
 
 	.section {
