--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -190,6 +190,38 @@ svg.feather {
 		z-index: 5;
 	}
 
+	.projectCard__image-container {
+		grid-column: 1 / -1;
+		height: 100%;
+		opacity: 0.25;
+	}
+
+	.projectCard__image-wrapper {
+		object-fit: cover;
+		width: auto;
+		height: 100%;
+		filter: grayscale(100%) contrast(1) brightness(80%);
+	}
+
+	.projectCard__image-container a {
+		width: 100%;
+		background-color: var(--green);
+		border-radius: var(--border-radius);
+		vertical-align: middle;
+	}
+
+	.projectCard__image-container a:before {
+		content: '';
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		inset: 0px;
+		z-index: 3;
+		transition: var(--transition);
+		background-color: var(--navy);
+		mix-blend-mode: screen;
+	}
+
 	.projectCard:nth-of-type(2n + 1) .projectCard__content {
 		grid-column: 1 / -1;
 		padding: 40px 40px 30px;
@@ -221,5 +253,18 @@ svg.feather {
 
 	.projectCard:nth-of-type(2n + 1) .projectCard__content {
 		padding: 25px 25px 20px;
+	}
+
+	.projectCard__image-wrapper {
+		padding-bottom: 62.2857%;
+		box-sizing: border-box;
+	}
+
+	.projectCard__title {
+		margin-bottom: 0px;
+	}
+
+	.projectCard:not(:last-of-type) {
+		margin-bottom: 30px;
 	}
 }
