--- a/src/components/SideLinks/SideLinks.css
+++ b/src/components/SideLinks/SideLinks.css
@@ -1,4 +1,4 @@
-.side-links {
+.sideLinks {
 	width: 40px;
 	position: fixed;
 	bottom: 0px;
@@ -11,11 +11,11 @@
 	align-items: center;
 }
 
-.side-links__container {
+.sideLinks__container {
 	margin-bottom: 20px;
 }
 
-.side-links:after {
+.sideLinks:after {
 	content: '';
 	display: block;
 	width: 1px;
@@ -24,18 +24,28 @@
 	background-color: var(--light-slate);
 }
 
-.side-links.left {
+.sideLinks.left {
 	left: 40px;
 	right: auto;
 }
 
-.side-links.right {
+.sideLinks.right {
 	left: auto;
 	right: 40px;
 }
 
+@media (max-width: 1080px) {
+	.sideLinks.left {
+		left: 20px;
+	}
+
+	.sideLinks.right {
+		right: 20px;
+	}
+}
+
 @media (max-width: 768px) {
-	.side-links {
+	.sideLinks {
 		display: none;
 	}
 }
